--- a/LogicGame2.html
+++ b/LogicGame2.html
@@ -23,9 +23,10 @@
                 <nav>
                     <ul>
                         <li><a href="#">maison</a></li>
-                        <li><a href="#">jeu des descriptions</a></li>
-                        <li><a href="#">jeu des prémisses</a></li>
-                        <li><a href="#">jeu des syllogismes</a></li>
+                        <li><a href="#">descriptions</a></li>
+                        <li><a href="#">prémisses</a></li>
+                        <li><a href="#">conclusions</a></li>
+                        <li><a href="#">syllogismes</a></li>
                     </ul>
                 </nav>
             </header>
@@ -43,8 +44,8 @@
                         <h2 id="énoncé">Syllogisme à résoudre</h2>
                         <p>On considère le syllogisme suivant:
                       <ul>
-                        <li>Tous les <span class="premisseA"></span>s sont des <span class="premisseB"></span>s</li>
-                        <li>Tous les <span class="premisseB"></span>s sont des <span class="premisseC"></span>s</li>
+                        <li id="probleme1"></li>
+                        <li id="probleme2"></li>
                       </ul>
                       </p>
                     </section>
@@ -120,7 +121,6 @@
             </footer>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>'); document.write('<script src="js/vendor/jquery-ui.js"><\/script>'); document.write('<script src="js/vendor/jquery.ui.touch-punch.js"><\/script>')</script>
 
         <script src="js/main.js"></script>
