--- a/LogicGame5.html
+++ b/LogicGame5.html
@@ -2,11 +2,12 @@
 <html class="no-js" lang="fr">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <!--meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"-->
         <title>Logic game</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		    <link rel="shortcut icon"href="favicon.ico">
+		    <link rel="shortcut icon" href="favicon.ico">
+        <link rel="stylesheet" href="css/jquery-ui.css">
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
 
@@ -25,8 +26,8 @@
                         <li><a href="#">maison</a></li>
                         <li><a href="#">descriptions</a></li>
                         <li><a href="#">prémisses</a></li>
-                        <li><a href="#">conclusions</a></li>
-                        <li><a href="#">syllogismes</a></li>
+                        <li><a href="LogicGame4.html">conclusions</a></li>
+                        <li><a href="LogicGame5.html">syllogismes</a></li>
                     </ul>
                 </nav>
             </header>
@@ -41,19 +42,8 @@
                         <p>Le <a href="http://www.gutenberg.org/files/4763/4763-h/4763-h.htm">jeu de Lewis Carroll</a> permet de résoudre des <a href="http://fr.wikipedia.org/wiki/Syllogisme">syllogismes</a> comme ceux d'<a href="http://fr.wikipedia.org/wiki/Aristote">Aristote</a></p>
                     </header>
                     <section>
-                        <h2 id="énoncé">Syllogisme à résoudre</h2>
-                        <p>Lors d'une séance au tribunal, le détective Charlie Kholmes constate que :
-                      <ul>
-                        <li id="probleme1"></li>
-                        <li id="probleme2"></li>
-                      </ul>
-                      <h5>Que peut-il en déduire ?</h5>
-                      </p>
-                    </section>
-                    <section>
                         <h2>Le plateau de jeu</h2>
                       <p>Le carré central représente les <span class="sB"></span>.</p>
-                        <p>
                           <table>
                             <tr>
                               <td></td>
@@ -83,12 +73,12 @@
                               <td class="cellule ouest nord" id="prem1conc1mid0"></td>
                               <td class="cellule nord sud est" id="prem1conc2mid0"></td>
                               <td class="cellule nord sud ouest" id="prem1conc3mid0"></td>
-                              <td class="cellule est nord" id="exthautdroit"></td>
+                              <td class="cellule est nord" id="prem1conc0mid0"></td>
                             </tr>
                             <tr>
                               <td class="cellule est sud ouest" id="prem2conc1mid0"></td>
                               <td class="cellule nord sud est ouest" id="prem1conc1mid1"></td>
-                              <td class="cellule nord sud est ouest" id="prem1conc0mid0"></td>
+                              <td class="cellule nord sud est ouest" id="prem1conc0mid1"></td>
                               <td class="cellule ouest sud est" id="prem2conc0mid0"></td>
                             </tr>
                             <tr>
@@ -105,40 +95,41 @@
                             </tr>
                       </table>
                       </td></tr></table>
-                      </p>
-                    <p>
+                      <p></p>
                       <div class="jeton rouge"></div>
                       <div class="jeton rouge"></div>
                       <div class="jeton rouge"></div>
                       <div class="jeton rouge"></div>
-                      </p>
-                    <p>
+                     <p> </p>
                       <div class="jeton gris"></div>
                       <div class="jeton gris"></div>
                       <div class="jeton gris"></div>
                       <div class="jeton gris"></div>
                       <div class="jeton gris"></div>
-                      </p>
                     </section>
                     <footer>
                         <h3>La conclusion du syllogisme</h3>
-                      <p><h5>La solution du syllogisme est</h5>
-                      <select name="proposition">
-                          <option value="solution0">Tous les <span class="sA"></span> sont des <span class="sC"></span>.</option>
-                          <option value="solution1">Quelques <span class="sA"></span> sont des <span class="sC"></span></option>
-                          <option value="solution2">Aucun des <span class="sA"></span> ne sont des <span class="sC"></span></option>
-                          <option value="solution3">Quelques <span class="sA"></span> ne sont pas des <span class="sC"></span></option>
-                          <option value="solution4">Aucun des <span class="sA"></span> ne sont des <span class="sC"></span></option>
-                          <option value="solution5">Quelques <span class="sA"></span> ne sont pas des <span class="sC"></span></option>
+                      <h5>La solution du syllogisme est</h5>
+                      <select id="proposition">
+                          <option id="o0" value="solution0">Tous les syllogismes sont compliqués</option>
+                          <option id="o1" value="solution1">Certains syllogismes sont amusants</option>
+                          <option id="o2" value="solution2">Aucun syllogisme n'est logique</option>
+                          <option id="o3" value="solution3">Lewis Carroll n'est pas un syllogisme</option>
+                          <option selected="selected" id="o4" value="solution4">Aucune conclusion n'est possible</option>
                       </select>
-                      </p>
                       <p id="sortie"></p>
                     </footer>
                 </article>
 
                 <aside>
-                    <h3>Règle du jeu</h3>
-                    <p>Placer les jetons comme on a vu auparavant, pour représenter la prémisse horizontalement et la conclusion verticalement. La proposition intermédiaire est localisée au centre du tableau si elle est vraie, au pourtour si elle est fausse. On constate que si un jeton rouge est à cheval entre deux cases, il peut être poussé vers l'une des deux cases par l'arrivée ultérieure d'un jeton gris. Quand les jetons ont tous été placés ou déplacés, proposer une solution du syllogisme avec le menu déroulant.</p>
+                        <h2 id="énoncé">Syllogisme à résoudre</h2>
+                  <img src="img/detective.png" alt="Lewis Carroll en détective">
+                        <p>Lors d'une séance au tribunal, le détective Carroll Holmes constate que :</p>
+                      <ul>
+                        <li id="probleme1"></li>
+                        <li id="probleme2"></li>
+                      </ul>
+                      <h5>Que peut-il en déduire ?</h5>
                 </aside>
 
             </div> <!-- #main -->
