--- a/LogicGame4.html
+++ b/LogicGame4.html
@@ -24,7 +24,7 @@
                 <nav>
                     <ul>
                         <li><a href="LogicGame1.html">maison</a></li>
-                        <li><a href="LogicGame2.html">descriptions</a></li>
+                        <li><a href="LogicGame2.html">univers</a></li>
                         <li><a href="LogicGame3.html">prémisses</a></li>
                         <li><a href="LogicGame4.html">conclusions</a></li>
                         <li><a href="LogicGame5.html">syllogismes</a></li>
@@ -86,6 +86,8 @@
                       <p></p>
                       <div class="jeton rouge"></div>
                       <div class="jeton rouge"></div>
+                      <div class="jeton rouge"></div>
+                      <div class="jeton rouge"></div>
                      <p> </p>
                       <div class="jeton gris"></div>
                       <div class="jeton gris"></div>
@@ -100,7 +102,7 @@
 
                 <aside>
                         <h2 id="énoncé">Pour aller plus loin</h2>
-                        <p>Dans le chapitre suivant, on utilise</p>
+                  <p>Dans <a href="LogicGame5.html">le chapitre suivant</a>, on utilise</p>
                       <ul>
                         <li>le tableau précédent comme tableau central</li>
                         <li>ce tableau comme moitié du haut</li>
