--- a/LogicGame5.html
+++ b/LogicGame5.html
@@ -24,7 +24,7 @@
                 <nav>
                     <ul>
                         <li><a href="LogicGame1.html">maison</a></li>
-                        <li><a href="LogicGame2.html">descriptions</a></li>
+                        <li><a href="LogicGame2.html">univers</a></li>
                         <li><a href="LogicGame3.html">prémisses</a></li>
                         <li><a href="LogicGame4.html">conclusions</a></li>
                         <li><a href="LogicGame5.html">syllogismes</a></li>
