Intro et négation

--- a/LogicGame2.html
+++ b/LogicGame2.html
@@ -24,7 +24,7 @@
                 <nav>
                     <ul>
                         <li><a href="LogicGame1.html">maison</a></li>
-                        <li><a href="LogicGame2.html">propositions</a></li>
+                        <li><a href="LogicGame2.html">univers</a></li>
                         <li><a href="LogicGame3.html">prémisses</a></li>
                         <li><a href="LogicGame4.html">conclusions</a></li>
                         <li><a href="LogicGame5.html">syllogismes</a></li>
@@ -42,15 +42,15 @@
                         <p>Illustration du tiers exclu: "être ou ne pas être, là est la question!"</p>
                     </header>
                     <section>
-                        <h2>Lunivers du discours dans un tableau</h2>
+                        <h2>L'univers du discours dans un tableau</h2>
                       <ul>
-                      <li>La moitié gauche du tableau ci-dessous représente les <span class="sC"></span></li>
-                        <li>Par conséquent, la moitié droite du tableau représente tous ceux qui ne sont <em>pas</em> des <span class="sC"></span>!</li>
+                      <li>La moitié gauche du tableau ci-dessous représente les <span class="sA"></span></li>
+                        <li>Par conséquent, la moitié droite du tableau représente tous ceux qui ne sont <em>pas</em> des <span class="sA"></span>!</li>
                         </ul>
                           <table id="plateau">
                             <tr>
                               <td class="cellule nord sud est ouest" id="prem1conc1mid1"></td>
-                              <td class="cellule nord sud est ouest" id="prem1conc1mid0"></td>
+                              <td class="cellule nord sud est ouest" id="prem0conc1mid0"></td>
                             </tr>
                       </table>
                       <p></p>
@@ -67,7 +67,12 @@
                 </article>
 
                 <aside>
-                        <h2 id="énoncé">La suite</h2>
+                  <h2>Codage</h2>
+                  <ul>
+                    <li><span class="jeton gris"></span> Un jeton gris symbolise la négation (parce que les nuages sont gris et considérés comme négatifs).</li>
+                    <li><span class="jeton rouge"></span> Un jeton rouge symbolise l'existence (parce que le soleil est un peu rouge et associé à l'espoir).</li>
+                  </ul>
+                        <h3>La suite</h3>
                   <p>Ensuite on peut représenter deux catégories, l'une verticalement, l'autre horizontalement comme ici, pour construire des propositions, ce qu'on va faire dans <a href="LogicGame3.html">le chapitre suivant</a>.</p>
                   <p>Pour résoudre des syllogismes, il faut trois catégories reliées entre elles deux à deux, et le tableau est un cube divisé en 8 cases cubiques. Lewis Carroll a préféré en faire une représentation plane par <a href="http://fr.wikipedia.org/wiki/Projection_stéréographique">projection stéréographique</a>. </p>
                 </aside>
@@ -77,7 +82,7 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h5>Alain Busser 2015</h5>
+                <h5>Alain Busser, IREM 974, 2015</h5>
             </footer>
         </div>
 
