--- a/LogicGame5.html
+++ b/LogicGame5.html
@@ -137,7 +137,7 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h5>Alain Busser 2015</h5>
+                <h5>Alain Busser, IREM 974, 2015</h5>
             </footer>
         </div>
 
