--- a/LogicGame2.html
+++ b/LogicGame2.html
@@ -28,6 +28,7 @@
                         <li><a href="LogicGame3.html">prémisses</a></li>
                         <li><a href="LogicGame4.html">conclusions</a></li>
                         <li><a href="LogicGame5.html">syllogismes</a></li>
+                        <li><a href="LogicGame6.html">utilitaire</a></li>
                     </ul>
                 </nav>
             </header>
