--- a/LogicGame6.html
+++ b/LogicGame6.html
@@ -39,18 +39,17 @@
 
                 <article>
                     <header>
-                        <h1>Jeu des syllogismes</h1>
-                        <p>Le <a href="http://www.gutenberg.org/files/4763/4763-h/4763-h.htm">jeu de Lewis Carroll</a> permet de résoudre des <a href="http://fr.wikipedia.org/wiki/Syllogisme">syllogismes</a> comme ceux d'<a href="http://fr.wikipedia.org/wiki/Aristote">Aristote</a></p>
+                        <h1>Utilitaire</h1>
                     </header>
                     <section>
                         <h2>Le plateau de jeu</h2>
-                      <p>Le carré central représente les <span class="sB"></span>.</p>
+                      <p>Le carré central représente les <input class="entree" type="text" id="eB" value="truc">s.</p>
                           <table>
                             <tr>
                               <td></td>
                               <td>
                                 <table><tr>
-                                  <td class="carre"><span class="sC"></span></td>
+                                  <td class="carre"><input class="entree" id="eC" value="chose">s</td>
                                   <td class="carre">   pas <span class="sC"></span></td></tr>
                                 </table>
                               </td>
@@ -58,7 +57,7 @@
                           <tr>
                             <td>
                               <table>
-                                <tr><td class="carre"><span class="sA"></span></td></tr>
+                                <tr><td class="carre"><input class="entree" id="eA" value="machin">s</td></tr>
                                 <tr><td class="carre">pas <span class="sA"></span></td></tr>
                               </table>
                           <td>
@@ -109,28 +108,11 @@
                       <div class="jeton gris"></div>
                     </section>
                     <footer>
-                        <h3>La conclusion du syllogisme</h3>
-                      <h5>La solution du syllogisme est</h5>
-                      <select id="proposition">
-                          <option id="o0" value="solution0">Tous les syllogismes sont compliqués</option>
-                          <option id="o1" value="solution1">Certains syllogismes sont amusants</option>
-                          <option id="o2" value="solution2">Aucun syllogisme n'est logique</option>
-                          <option id="o3" value="solution3">Lewis Carroll n'est pas un syllogisme</option>
-                          <option selected="selected" id="o4" value="solution4">Aucune conclusion n'est possible</option>
-                      </select>
-                      <p id="sortie"></p>
+                      <h5 id="sortie"></h5>
                     </footer>
                 </article>
 
                 <aside>
-                        <h2 id="énoncé">Syllogisme à résoudre</h2>
-                  <img src="img/detective.png" alt="Lewis Carroll en détective">
-                        <p>Lors d'une séance au tribunal, le détective Carroll Holmes constate que :</p>
-                      <ul>
-                        <li id="probleme1"></li>
-                        <li id="probleme2"></li>
-                      </ul>
-                      <h5>Que peut-il en déduire ?</h5>
                 </aside>
 
             </div> <!-- #main -->
@@ -144,6 +126,6 @@
 
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>'); document.write('<script src="js/vendor/jquery-ui.js"><\/script>'); document.write('<script src="js/vendor/jquery.ui.touch-punch.js"><\/script>')</script>
 
-        <script src="js/logic5.js"></script>
+        <script src="js/logic6.js"></script>
     </body>
 </html>
