solveur de syllogismes sur le côté

--- a/LogicGame6.html
+++ b/LogicGame6.html
@@ -113,6 +113,38 @@
                 </article>
 
                 <aside>
+                  <h5>Prémisses</h5>
+                  <ol>
+                    <li>
+                      <select id="choixA">
+                        <option id="cA1" selected="seleted">Tous les</option>
+                        <option id="cA2">Quelques</option>
+                        <option id="cA3">Aucuns des</option>
+                      </select>
+                       <span class="sA"></span> 
+                      <select id="verbe1">
+                        <option id="vA1" selected="selected">sont des</option>
+                        <option id="vA2">ne sont pas des</option>
+                        <option id="vA3">ne sont des</option>
+                      </select>
+                      <span class="sB"></span>.</li>
+                    <li>
+                      <select id="choixB">
+                        <option id="cB1" seleted="selected">Tous les</option>
+                        <option id="cB2">Quelques</option>
+                        <option id="cB3">Aucuns des</option>
+                      </select>
+                      <span class="sxB"></span>
+                      <select id="verbe2">
+                        <option id="vB1" selected="selected">sont des</option>
+                        <option id="vB2">ne sont pas des</option>
+                        <option id="vB3">ne sont des</option>
+                      </select>
+                      <span class="sxC"></span>.</li>
+                  </ol>
+                  <h5>Conclusion</h5>
+                  <p>La conclusion est que</p>
+                  <h2 id="sorsyl">On ne peut pas conclure</h2>
                 </aside>
 
             </div> <!-- #main -->
