passage au singulier et ajout du petit tableau

--- a/LogicGame5.html
+++ b/LogicGame5.html
@@ -44,7 +44,7 @@
                     </header>
                     <section>
                         <h2>Le plateau de jeu</h2>
-                      <p>Le carré central représente les <span class="sB"></span>.</p>
+                      <p>Le carré central représente les <span class="sB"></span>s.</p>
                           <table>
                             <tr>
                               <td></td>
@@ -107,6 +107,34 @@
                       <div class="jeton gris"></div>
                       <div class="jeton gris"></div>
                       <div class="jeton gris"></div>
+                          <table>
+                            <tr>
+                              <td></td>
+                              <td>
+                                <table><tr>
+                                  <td class="carre"><span class="sC"></span></td>
+                                  <td class="carre">   pas <span class="sC"></span></td></tr>
+                                </table>
+                              </td>
+                            </tr>
+                          <tr>
+                            <td>
+                              <table>
+                                <tr><td class="carre"><span class="sA"></span></td></tr>
+                                <tr><td class="carre">pas <span class="sA"></span></td></tr>
+                              </table>
+                          <td>
+                      <table>
+                        <tr>
+                          <td class="cellule nord sud est ouest"></td>
+                          <td class="cellule nord sud est ouest"></td>
+                        </tr>
+                        <tr>
+                          <td class="cellule nord sud est ouest"></td>
+                          <td class="cellule nord sud est ouest"></td>
+                        </tr>
+                      </table>
+                      </td></tr></table>
                     </section>
                     <footer>
                         <h3>La conclusion du syllogisme</h3>
