suppression des entrées en trop

--- a/LogicGame6.html
+++ b/LogicGame6.html
@@ -112,7 +112,7 @@
                               <td></td>
                               <td>
                                 <table><tr>
-                                  <td class="carre"><input class="entree" id="eC" value="chose"></td>
+                                  <td class="carre"><span class="sC">chose</span></td>
                                   <td class="carre">   pas <span class="sC"></span></td></tr>
                                 </table>
                               </td>
@@ -120,7 +120,7 @@
                           <tr>
                             <td>
                               <table>
-                                <tr><td class="carre"><input class="entree" id="eA" value="machin"></td></tr>
+                                <tr><td class="carre"><span class="sA">machin</span></td></tr>
                                 <tr><td class="carre">pas <span class="sA"></span></td></tr>
                               </table>
                           <td>
