--- a/LogicGame3.html
+++ b/LogicGame3.html
@@ -23,7 +23,7 @@
                 <h1 class="title">Puzzle logique de Lewis Carroll</h1>
                 <nav>
                     <ul>
-                        <li><a href="LogicGame1.html">maison</a></li>
+                        <li><a href="index.html">maison</a></li>
                         <li><a href="LogicGame2.html">univers</a></li>
                         <li><a href="LogicGame3.html">prémisses</a></li>
                         <li><a href="LogicGame4.html">conclusions</a></li>
